Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55943 Add support for ahead-of-time generation of QML type caches
  3. QTBUG-58569

Fix build of assembler cross-compilation on 32-bit hosts

XMLWordPrintable

      Currently for example the ARMv7 assembler is only added to qmldevtools if the host is x86-64. This limitation is artificial and should be fixed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shausman Simon Hausmann
            shausman Simon Hausmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes