Fix assembler cross-compilation on 32-bit hosts

The GOT register restoring logic needs to be done via TargetPLatform
members instead of plain #ifdefs.

Task-number: QTBUG-58569
Change-Id: If00d3f92558361ad5dcb20c3ff7eff78d31d75d3
Reviewed-by: Lars Knoll <lars.knoll@qt.io>